--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.doris.rand.generator.RandomDDLGenerator</mainClass>
+                            <mainClass>com.doris.rand.Main</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
